--- a/GoogleAdsDemo/pom.xml
+++ b/GoogleAdsDemo/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>jcommander</artifactId>
             <version>1.78</version>
         </dependency>
+         <dependency>
+            <groupId>com.joveo</groupId>
+            <artifactId>eqr-test-sdk</artifactId>
+            <version>1.78</version>
+        </dependency>     
 
     </dependencies>
     <properties>
