--- a/GoogleAdsDemo/pom.xml
+++ b/GoogleAdsDemo/pom.xml
@@ -1,34 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>org.example</groupId>
-    <artifactId>GoogleAdsDemo</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>com.google.api-ads</groupId>
-            <artifactId>google-ads</artifactId>
-            <version>17.0.1</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
-        <dependency>
-            <groupId>com.beust</groupId>
-            <artifactId>jcommander</artifactId>
-            <version>1.78</version>
-        </dependency>
-         <dependency>
-            <groupId>com.joveo</groupId>
-            <artifactId>eqr-test-sdk</artifactId>
-            <version>1.78</version>
-        </dependency>     
-
-    </dependencies>
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
-
-</project>
+{"project": {"@xmlns": "http://maven.apache.org/POM/4.0.0", "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance", "@xsi:schemaLocation": "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd", "modelVersion": "4.0.0", "groupId": "org.example", "artifactId": "GoogleAdsDemo", "version": "1.0-SNAPSHOT", "dependencies": {"dependency": [{"groupId": "vikas1830", "artifactId": "google-ads", "version": "17.0.1"}, {"groupId": "com.beust", "artifactId": "jcommander", "version": "1.78"}, {"groupId": "com.joveo", "artifactId": "eqr-test-sdk", "version": "2.0.76"}]}, "properties": {"maven.compiler.source": "11", "maven.compiler.target": "11"}}}
