sdk version updated

--- a/GoogleAdsDemo/pom.xml
+++ b/GoogleAdsDemo/pom.xml
@@ -1,202 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.joveo</groupId>
-  <artifactId>e2e-tests</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>eqr-test-runner</name>
-  <description>Mojo SDK</description>
-  <properties>
-    <java.version>9</java.version>
-  </properties>
-  <repositories>
-    <repository> <id>central</id> <name>c07108d0a783-releases</name>
-      <url>http://artifactory.joveo.com/artifactory/libs-release-local</url> </repository>
-    <!-- <repository>
-      <id>snapshots</id>
-      <name>c07108d0a783-release</name>
-      <url>http://artifactory.joveo.com/artifactory/libs-release-local</url>
-    </repository> -->
-  </repositories>
-  <dependencies>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.8</version>
-    </dependency>
-      <dependency>
-          <groupId>com.joveo</groupId>
-          <artifactId>eqr-data-creator</artifactId>
-          <version>2.0.18-SNAPSHOT</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
-      <dependency>
-      <groupId>commons-validator</groupId>
-      <artifactId>commons-validator</artifactId>
-      <version>1.6</version>
-      </dependency>
-    <dependency>
-      <groupId>com.joveo</groupId>
-      <artifactId>eqr-test-sdk</artifactId>
-      <version>2.0.62</version>
-    </dependency>
-      <dependency>
-          <groupId>com.atlassian.jira</groupId>
-          <artifactId>jira-rest-java-client-app</artifactId>
-          <version>5.2.0</version>
-      </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.15</version>
-    </dependency>
-      <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <version>8.0.15</version>
-      </dependency>
-      <dependency>
-          <groupId>com.joveo</groupId>
-          <artifactId>services-api-client</artifactId>
-          <version>0.0.95</version>
-      </dependency>
-      <dependency>
-          <groupId>com.google.api-client</groupId>
-          <artifactId>google-api-client</artifactId>
-          <version>1.23.0</version>
-      </dependency>
-      <dependency>
-          <groupId>com.google.oauth-client</groupId>
-          <artifactId>google-oauth-client-jetty</artifactId>
-          <version>1.23.0</version>
-      </dependency>
-      <dependency>
-          <groupId>com.google.apis</groupId>
-          <artifactId>google-api-services-sheets</artifactId>
-          <version>v4-rev493-1.23.0</version>
-      </dependency>
-  </dependencies>
-  <build>
-    <pluginManagement>
-      <plugins>
-      <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.8.5</version>
-    <executions>
-     <execution>
-      <goals>
-       <goal>prepare-agent</goal>
-      </goals>
-     </execution>
-     <execution>
-      <id>report</id>
-      <phase>prepare-package</phase>
-      <goals>
-       <goal>report</goal>
-      </goals>
-     </execution>
-    </executions>
-   </plugin>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <source>9</source>
-            <target>9</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>3.1.1</version>
-          <configuration>
-            <configLocation>checkstyle.xml</configLocation>
-            <encoding>UTF-8</encoding>
-            <consoleOutput>true</consoleOutput>
-            <failsOnError>true</failsOnError>
-            <linkXRef>false</linkXRef>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
-          <configuration>
-            <suiteXmlFiles>
-              <suiteFile>${suiteFile}</suiteFile>
-            </suiteXmlFiles>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-
-  <reporting>
-  <plugins>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-site-plugin</artifactId>
-    <version>3.9.1</version>
-   </plugin>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-project-info-reports-plugin</artifactId>
-    <version>3.1.0</version>
-   </plugin>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-checkstyle-plugin</artifactId>
-    <version>3.1.1</version>
-    <configuration>
-     <configLocation>checkstyle.xml</configLocation>
-    </configuration>
-   </plugin>
-   <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <reportSets>
-     <reportSet>
-      <reports>
-       <!-- select non-aggregate reports -->
-       <report>report</report>
-      </reports>
-     </reportSet>
-    </reportSets>
-   </plugin>
-  </plugins>
- </reporting>
-
-
-</project>
+{"project": {"@xmlns": "http://maven.apache.org/POM/4.0.0", "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance", "@xsi:schemaLocation": "http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd", "modelVersion": "4.0.0", "groupId": "com.joveo", "artifactId": "e2e-tests", "version": "1.0.0-SNAPSHOT", "name": "eqr-test-runner", "description": "Mojo SDK", "properties": {"java.version": "9"}, "repositories": {"repository": {"id": "central", "name": "c07108d0a783-releases", "url": "http://artifactory.joveo.com/artifactory/libs-release-local"}}, "dependencies": {"dependency": [{"groupId": "vikas1830", "artifactId": "testng", "version": "6.8"}, {"groupId": "com.joveo", "artifactId": "eqr-data-creator", "version": "2.0.18-SNAPSHOT"}, {"groupId": "commons-validator", "artifactId": "commons-validator", "version": "1.6"}, {"groupId": "com.joveo", "artifactId": "eqr-test-sdk", "version": "2.0.76"}, {"groupId": "com.atlassian.jira", "artifactId": "jira-rest-java-client-app", "version": "5.2.0"}, {"groupId": "mysql", "artifactId": "mysql-connector-java", "version": "8.0.15"}, {"groupId": "mysql", "artifactId": "mysql-connector-java", "version": "8.0.15"}, {"groupId": "com.joveo", "artifactId": "services-api-client", "version": "0.0.95"}, {"groupId": "com.google.api-client", "artifactId": "google-api-client", "version": "1.23.0"}, {"groupId": "com.google.oauth-client", "artifactId": "google-oauth-client-jetty", "version": "1.23.0"}, {"groupId": "com.google.apis", "artifactId": "google-api-services-sheets", "version": "v4-rev493-1.23.0"}]}, "build": {"pluginManagement": {"plugins": {"plugin": [{"groupId": "org.jacoco", "artifactId": "jacoco-maven-plugin", "version": "0.8.5", "executions": {"execution": [{"goals": {"goal": "prepare-agent"}}, {"id": "report", "phase": "prepare-package", "goals": {"goal": "report"}}]}}, {"artifactId": "maven-clean-plugin", "version": "3.1.0"}, {"artifactId": "maven-resources-plugin", "version": "3.0.2"}, {"groupId": "org.apache.maven.plugins", "artifactId": "maven-compiler-plugin", "configuration": {"source": "9", "target": "9"}}, {"groupId": "org.apache.maven.plugins", "artifactId": "maven-checkstyle-plugin", "version": "3.1.1", "configuration": {"configLocation": "checkstyle.xml", "encoding": "UTF-8", "consoleOutput": "true", "failsOnError": "true", "linkXRef": "false"}}, {"groupId": "org.apache.maven.plugins", "artifactId": "maven-surefire-plugin", "version": "2.19.1", "configuration": {"suiteXmlFiles": {"suiteFile": "${suiteFile}"}}}, {"artifactId": "maven-jar-plugin", "version": "3.0.2"}, {"artifactId": "maven-install-plugin", "version": "2.5.2"}, {"artifactId": "maven-deploy-plugin", "version": "2.8.2"}, {"artifactId": "maven-site-plugin", "version": "3.7.1"}, {"artifactId": "maven-project-info-reports-plugin", "version": "3.0.0"}]}}}, "reporting": {"plugins": {"plugin": [{"groupId": "org.apache.maven.plugins", "artifactId": "maven-site-plugin", "version": "3.9.1"}, {"groupId": "org.apache.maven.plugins", "artifactId": "maven-project-info-reports-plugin", "version": "3.1.0"}, {"groupId": "org.apache.maven.plugins", "artifactId": "maven-checkstyle-plugin", "version": "3.1.1", "configuration": {"configLocation": "checkstyle.xml"}}, {"groupId": "org.jacoco", "artifactId": "jacoco-maven-plugin", "reportSets": {"reportSet": {"reports": {"report": "report"}}}}]}}}}
