sdk version updated

--- a/GoogleAdsDemo/pom.xml
+++ b/GoogleAdsDemo/pom.xml
@@ -1,202 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.joveo</groupId>
-  <artifactId>e2e-tests</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>eqr-test-runner</name>
-  <description>Mojo SDK</description>
-  <properties>
-    <java.version>9</java.version>
-  </properties>
-  <repositories>
-    <repository> <id>central</id> <name>c07108d0a783-releases</name>
-      <url>http://artifactory.joveo.com/artifactory/libs-release-local</url> </repository>
-    <!-- <repository>
-      <id>snapshots</id>
-      <name>c07108d0a783-release</name>
-      <url>http://artifactory.joveo.com/artifactory/libs-release-local</url>
-    </repository> -->
-  </repositories>
-  <dependencies>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.8</version>
-    </dependency>
-      <dependency>
-          <groupId>com.joveo</groupId>
-          <artifactId>eqr-data-creator</artifactId>
-          <version>2.0.18-SNAPSHOT</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
-      <dependency>
-      <groupId>commons-validator</groupId>
-      <artifactId>commons-validator</artifactId>
-      <version>1.6</version>
-      </dependency>
-    <dependency>
-      <groupId>com.joveo</groupId>
-      <artifactId>eqr-test-sdk</artifactId>
-      <version>2.0.62</version>
-    </dependency>
-      <dependency>
-          <groupId>com.atlassian.jira</groupId>
-          <artifactId>jira-rest-java-client-app</artifactId>
-          <version>5.2.0</version>
-      </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.15</version>
-    </dependency>
-      <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <version>8.0.15</version>
-      </dependency>
-      <dependency>
-          <groupId>com.joveo</groupId>
-          <artifactId>services-api-client</artifactId>
-          <version>0.0.95</version>
-      </dependency>
-      <dependency>
-          <groupId>com.google.api-client</groupId>
-          <artifactId>google-api-client</artifactId>
-          <version>1.23.0</version>
-      </dependency>
-      <dependency>
-          <groupId>com.google.oauth-client</groupId>
-          <artifactId>google-oauth-client-jetty</artifactId>
-          <version>1.23.0</version>
-      </dependency>
-      <dependency>
-          <groupId>com.google.apis</groupId>
-          <artifactId>google-api-services-sheets</artifactId>
-          <version>v4-rev493-1.23.0</version>
-      </dependency>
-  </dependencies>
-  <build>
-    <pluginManagement>
-      <plugins>
-      <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.8.5</version>
-    <executions>
-     <execution>
-      <goals>
-       <goal>prepare-agent</goal>
-      </goals>
-     </execution>
-     <execution>
-      <id>report</id>
-      <phase>prepare-package</phase>
-      <goals>
-       <goal>report</goal>
-      </goals>
-     </execution>
-    </executions>
-   </plugin>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <source>9</source>
-            <target>9</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>3.1.1</version>
-          <configuration>
-            <configLocation>checkstyle.xml</configLocation>
-            <encoding>UTF-8</encoding>
-            <consoleOutput>true</consoleOutput>
-            <failsOnError>true</failsOnError>
-            <linkXRef>false</linkXRef>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
-          <configuration>
-            <suiteXmlFiles>
-              <suiteFile>${suiteFile}</suiteFile>
-            </suiteXmlFiles>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-
-  <reporting>
-  <plugins>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-site-plugin</artifactId>
-    <version>3.9.1</version>
-   </plugin>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-project-info-reports-plugin</artifactId>
-    <version>3.1.0</version>
-   </plugin>
-   <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-checkstyle-plugin</artifactId>
-    <version>3.1.1</version>
-    <configuration>
-     <configLocation>checkstyle.xml</configLocation>
-    </configuration>
-   </plugin>
-   <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <reportSets>
-     <reportSet>
-      <reports>
-       <!-- select non-aggregate reports -->
-       <report>report</report>
-      </reports>
-     </reportSet>
-    </reportSets>
-   </plugin>
-  </plugins>
- </reporting>
-
-
-</project>
+<?xml version="1.0" encoding="UTF-8" ?><root><project type="dict"><key name="@xmlns" type="str">http://maven.apache.org/POM/4.0.0</key><key name="@xmlns:xsi" type="str">http://www.w3.org/2001/XMLSchema-instance</key><key name="@xsi:schemaLocation" type="str">http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd</key><modelVersion type="str">4.0.0</modelVersion><groupId type="str">com.joveo</groupId><artifactId type="str">e2e-tests</artifactId><version type="str">1.0.0-SNAPSHOT</version><name type="str">eqr-test-runner</name><description type="str">Mojo SDK</description><properties type="dict"><java.version type="str">9</java.version></properties><repositories type="dict"><repository type="dict"><id type="str">central</id><name type="str">c07108d0a783-releases</name><url type="str">http://artifactory.joveo.com/artifactory/libs-release-local</url></repository></repositories><dependencies type="dict"><dependency type="list"><item type="dict"><groupId type="str">vikas1830</groupId><artifactId type="str">testng</artifactId><version type="str">6.8</version></item><item type="dict"><groupId type="str">com.joveo</groupId><artifactId type="str">eqr-data-creator</artifactId><version type="str">2.0.18-SNAPSHOT</version></item><item type="dict"><groupId type="str">commons-validator</groupId><artifactId type="str">commons-validator</artifactId><version type="str">1.6</version></item><item type="dict"><groupId type="str">com.joveo</groupId><artifactId type="str">eqr-test-sdk</artifactId><version type="str">2.0.76</version></item><item type="dict"><groupId type="str">com.atlassian.jira</groupId><artifactId type="str">jira-rest-java-client-app</artifactId><version type="str">5.2.0</version></item><item type="dict"><groupId type="str">mysql</groupId><artifactId type="str">mysql-connector-java</artifactId><version type="str">8.0.15</version></item><item type="dict"><groupId type="str">mysql</groupId><artifactId type="str">mysql-connector-java</artifactId><version type="str">8.0.15</version></item><item type="dict"><groupId type="str">com.joveo</groupId><artifactId type="str">services-api-client</artifactId><version type="str">0.0.95</version></item><item type="dict"><groupId type="str">com.google.api-client</groupId><artifactId type="str">google-api-client</artifactId><version type="str">1.23.0</version></item><item type="dict"><groupId type="str">com.google.oauth-client</groupId><artifactId type="str">google-oauth-client-jetty</artifactId><version type="str">1.23.0</version></item><item type="dict"><groupId type="str">com.google.apis</groupId><artifactId type="str">google-api-services-sheets</artifactId><version type="str">v4-rev493-1.23.0</version></item></dependency></dependencies><build type="dict"><pluginManagement type="dict"><plugins type="dict"><plugin type="list"><item type="dict"><groupId type="str">org.jacoco</groupId><artifactId type="str">jacoco-maven-plugin</artifactId><version type="str">0.8.5</version><executions type="dict"><execution type="list"><item type="dict"><goals type="dict"><goal type="str">prepare-agent</goal></goals></item><item type="dict"><id type="str">report</id><phase type="str">prepare-package</phase><goals type="dict"><goal type="str">report</goal></goals></item></execution></executions></item><item type="dict"><artifactId type="str">maven-clean-plugin</artifactId><version type="str">3.1.0</version></item><item type="dict"><artifactId type="str">maven-resources-plugin</artifactId><version type="str">3.0.2</version></item><item type="dict"><groupId type="str">org.apache.maven.plugins</groupId><artifactId type="str">maven-compiler-plugin</artifactId><configuration type="dict"><source type="str">9</source><target type="str">9</target></configuration></item><item type="dict"><groupId type="str">org.apache.maven.plugins</groupId><artifactId type="str">maven-checkstyle-plugin</artifactId><version type="str">3.1.1</version><configuration type="dict"><configLocation type="str">checkstyle.xml</configLocation><encoding type="str">UTF-8</encoding><consoleOutput type="str">true</consoleOutput><failsOnError type="str">true</failsOnError><linkXRef type="str">false</linkXRef></configuration></item><item type="dict"><groupId type="str">org.apache.maven.plugins</groupId><artifactId type="str">maven-surefire-plugin</artifactId><version type="str">2.19.1</version><configuration type="dict"><suiteXmlFiles type="dict"><suiteFile type="str">${suiteFile}</suiteFile></suiteXmlFiles></configuration></item><item type="dict"><artifactId type="str">maven-jar-plugin</artifactId><version type="str">3.0.2</version></item><item type="dict"><artifactId type="str">maven-install-plugin</artifactId><version type="str">2.5.2</version></item><item type="dict"><artifactId type="str">maven-deploy-plugin</artifactId><version type="str">2.8.2</version></item><item type="dict"><artifactId type="str">maven-site-plugin</artifactId><version type="str">3.7.1</version></item><item type="dict"><artifactId type="str">maven-project-info-reports-plugin</artifactId><version type="str">3.0.0</version></item></plugin></plugins></pluginManagement></build><reporting type="dict"><plugins type="dict"><plugin type="list"><item type="dict"><groupId type="str">org.apache.maven.plugins</groupId><artifactId type="str">maven-site-plugin</artifactId><version type="str">3.9.1</version></item><item type="dict"><groupId type="str">org.apache.maven.plugins</groupId><artifactId type="str">maven-project-info-reports-plugin</artifactId><version type="str">3.1.0</version></item><item type="dict"><groupId type="str">org.apache.maven.plugins</groupId><artifactId type="str">maven-checkstyle-plugin</artifactId><version type="str">3.1.1</version><configuration type="dict"><configLocation type="str">checkstyle.xml</configLocation></configuration></item><item type="dict"><groupId type="str">org.jacoco</groupId><artifactId type="str">jacoco-maven-plugin</artifactId><reportSets type="dict"><reportSet type="dict"><reports type="dict"><report type="str">report</report></reports></reportSet></reportSets></item></plugin></plugins></reporting></project></root>
